--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-.pio
+.pio/
+.vscode/
 .vscode/.browse.c_cpp.db*
+.vscode/ipch/
 .vscode/c_cpp_properties.json
 .vscode/launch.json
-.vscode/ipch
-.vscode
-test
+
+__pycache__/
+*.pyc
+.venv/
+venv/
+
+tools/logs/
+tools/monitor_settings.json
+
+.DS_Store
+Thumbs.db
+
+test/
