--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# PlatformIO / VSCode
 .pio/
 .vscode/
 .vscode/.browse.c_cpp.db*
@@ -5,15 +6,24 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 
+# Python
 __pycache__/
 *.pyc
 .venv/
 venv/
 
+# PyInstaller build outputs (DEV only)
+tools/build/
+tools/dist/
+*.spec
+
+# Logs / settings (DEV only)
 tools/logs/
 tools/monitor_settings.json
 
+# OS junk
 .DS_Store
 Thumbs.db
 
+# Local tests
 test/
